# sharedutils

./: .gitmodules  CMakeLists.txt  Makefile  README.md  appveyor.yml  util.sln  util.vcxproj  util.vcxproj.filters  win_clang_exports.def
.github/workflows/: pragma-generic-ci.yml  pragma-linux-ci.yml  pragma-windows-ci.yml
include/sharedutils/: BS_thread_pool.hpp  alpha_mode.hpp  base64.hpp  callback_handler.h  callback_handler_impl.h  chronotime.h  chronoutil.h  ctpl_stl.h  datastream.h  def_handle.h  eventmessage.h  functioncallback.h  indexed_vector.hpp  magic_enum.hpp  magic_enum_util.hpp  netpacket.hpp  scope_guard.h  unifiedptr.h  util.h  util_baking.hpp  util_case_insensitive_hash.hpp  util_clock.hpp  util_command_manager.hpp  util_cpu_profiler.hpp  util_date.hpp  util_debug.h  util_disarmable_deleter.hpp  util_enum.h  util_enum_register.hpp  util_event_reply.hpp  util_extensible_enum.hpp  util_file.h  util_hair.hpp  util_handle.hpp  util_hash.hpp  util_hashable.hpp  util_heterogenous_lookup.hpp  util_ifile.hpp  util_image_buffer.hpp  util_library.hpp  (+22 more)
include/sharedutils/asset_loader/: asset_format_handler.hpp  asset_format_loader.hpp  asset_load_info.hpp  asset_load_job.hpp  asset_loader.hpp  asset_manager.hpp  asset_processor.hpp  file_asset_manager.hpp  file_asset_processor.hpp
include/sharedutils/impl/: impl_util_number_property.hpp  impl_util_string_property.hpp
include/sharedutils/property/: util_property.hpp  util_property_color.hpp  util_property_euler_angles.hpp  util_property_matrix.hpp  util_property_quat.hpp  util_property_transform.hpp  util_property_vector.h
modules/: date.cppm  spdlog.cppm
src/: base64.cpp  callback_handler.cpp  chronotime.cpp  datastream.cpp  definitions.hpp  eventmessage.cpp  functioncallback.cpp  impl_util_number_property.hpp  indexed_vector.cpp  murmurhash3.cpp  netpacket.cpp  scope_guard.cpp  unifiedptr.cpp  util.cpp  util_baking.cpp  util_case_insensitive_hash.cpp  util_clock.cpp  util_command_manager.cpp  util_cpu_profiler.cpp  util_date.cpp  util_debug.cpp  util_enum_register.cpp  util_extensible_enum.cpp  util_file.cpp  util_guid.cpp  util_hair.cpp  util_handle.cpp  util_hash.cpp  util_ifile.cpp  util_image.cpp  util_image_tonemapping.cpp  util_library.cpp  util_link.cpp  util_markup_file.cpp  util_parallel_job.cpp  util_path.cpp  util_pixel_view.cpp  util_pragma.cpp  util_property_matrix.cpp  util_property_vector.cpp  (+11 more)
src/asset_loader/: asset_format_handler.cpp  asset_format_loader.cpp  asset_import_manager.cpp  asset_load_info.cpp  asset_load_job.cpp  asset_loader.cpp  asset_manager.cpp  asset_processor.cpp  file_asset_manager.cpp  file_asset_processor.cpp
src/implementation/: baking.cpp  base64.cpp  bs_thread_pool.cpp  callback_handler.cpp  chrono.cpp  clock.cpp  command_manager.cpp  core.cpp  core_guid.cpp  cpu_profiler.cpp  data_stream.cpp  debug.cpp  enum_register.cpp  event_message.cpp  file.cpp  file_interface.cpp  function_callback.cpp  global_string_table.cpp  hair.cpp  handle.cpp  hash.cpp  heap.cpp  library.cpp  link.cpp  markup_file.cpp  memory.cpp  murmur_hash3.cpp  net_packet.cpp  parallel_job.cpp  path.cpp  pragma.cpp  scope_guard.cpp  shader_info.cpp  shared_handle.cpp  thread_pool.cpp  uri.cpp  version.cpp
src/implementation/asset_loader/: core.cpp  file_manager.cpp  file_manager_import.cpp  file_processor.cpp  format_handler.cpp  format_loader.cpp  load_info.cpp  manager.cpp
src/implementation/property/: color.cpp  euler_angles.cpp  matrix.cpp  property.cpp  quaternion.cpp  string.cpp  transform.cpp  vector.cpp
src/interface/: baking.cppm  base64.cppm  callback_handler.cppm  chrono.cppm  clock.cppm  command_manager.cppm  core.cppm  cpu_profiler.cppm  data_stream.cppm  debug.cppm  disarmable_deleter.cppm  enum_hash.cppm  enum_register.cppm  enums.cppm  event_message.cppm  extensible_enum.cppm  file.cppm  file_interface.cppm  function_callback.cppm  global_string_table.cppm  hair.cppm  handle.cppm  hash.cppm  hashable.cppm  heap.cppm  heterogenous_lookup.cppm  indexed_vector.cppm  library.cppm  link.cppm  log.cppm  magic_enum_util.cppm  markup_file.cppm  memory.cppm  memory_iterator.cppm  net_packet.cppm  overridable.cppm  parallel_job.cppm  path.cppm  pragma.cppm  scope_guard.cppm  (+12 more)
src/interface/asset_loader/: asset_loader.cppm  core.cppm  file_manager.cppm  file_processor.cppm  format_handler.cppm  format_loader.cppm  load_info.cppm  load_job.cppm  manager.cppm  processor.cppm
src/interface/property/: color.cppm  euler_angles.cppm  matrix.cppm  property.cppm  quaternion.cppm  simple_number.cppm  string.cppm  transform.cppm  vector.cppm
src/property/: util_property.cpp  util_property_color.cpp  util_property_euler_angles.cpp  util_property_matrix.cpp  util_property_quat.cpp  util_property_transform.cpp  util_property_vector.cpp
src/uriparser/: UriMemory.c
